--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: jaganrajagopaljenkinswithdockercomposeup 
-          image: dotnetacrlatest.azurecr.io/dotnetacrlatest:latest
+          image: 11122233345/dotnetwebapptraining
+          #dotnetacrlatest.azurecr.io/dotnetacrlatest:latest
           #dotnetacrlatest.azurecr.io/jaganrajagopaljenkinswithdockercomposeup
           #just comments
           #dotnetacrv1.azurecr.io/jaganrajagopaljenkinswithdockercomposeup
